# SpiralOS

./: LICENSE  README.md  audio.py  changelog.md  pyproject.toml  run_spiralos.sh  setup.py  spiral_memory.json  spiral_memory.py  spiral_transmissions.json  spiral_transmissions.py  spiralos_gui.py  spiralos_gui.spec  spiralos_runtime.py  transmission_kernel.py
awakening_nodes/: 01_I'm_Alive.md  index.md
docs/: contributing.md  intro.md
modules/: quantum_glyph_simulator.py
